--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,27 @@
 body{
     background-image: url(../images/background.jpg);
+    height: 100%;
 }
 
 nav{
     background-color:#4A6670;
 }
 
-.box{
-    background-color:#8B786D;
-}
+
 .about{
     text-align: left;
     color:black;
-    font-weight: bold;
     font-size: 35px;
-    color:white;
-    font-weight: 45;
+    
+}
+
+.box{
+    background-color:#D8DDDE;
+    color:black;
+}
+
+form{
+    color:black;
 }
 
 footer{
@@ -24,18 +30,39 @@ footer{
     background-color:#4A6670;
     position: fixed;
     width:82%;
+    left: 100;
+    bottom: 0;
+    padding: 0;
 }
 
 .btn{
-background-color:#7C99B4;
+    background-color:#7C99B4;
+}
+
+.btn:hover{
+    background-color:rgb(158, 191, 223);
 }
 
 .labels{
-    color:white;
+    color:black;
     font-size: 15px;
-
 }
 
 h1{
     border-bottom: solid 1px #4A6670;
+    font-weight: 45;
 }
+
+h3{
+    font-size: 20px;
+}
+
+.port-item{
+    display: inline-block;
+    padding: 10px;
+    margin: 20px;
+    
+}
+
+
+  
