--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ nav{
     background-color:#4A6670;
 }
 
+#profile-pic{
+    float:left;
+    max-height: 175px;
+}
 
 .about{
     text-align: left;
@@ -18,6 +22,11 @@ nav{
 .box{
     background-color:#D8DDDE;
     color:black;
+    min-height: 500px;
+}
+
+.social-links{
+    float: right;
 }
 
 form{
@@ -51,6 +60,7 @@ footer{
 h1{
     border-bottom: solid 1px #4A6670;
     font-weight: 45;
+    font-size:30px;
 }
 
 h3{
