began making images clickable, moved linkedin links around

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,15 +22,37 @@ nav{
 .box{
     background-color:#D8DDDE;
     color:black;
-    min-height: 500px;
+    min-height: 400px;
 }
 
 .social-links{
-    float: right;
+    float: left;
+}
+
+#social-links-index{
+    float:left;
+    padding:10px;
+    margin-bottom: 30px;
+    background-color:#48435C;
+    width:100%;
+}
+
+#social-links-portfolio{
+    float:left;
+    padding:5px;
+    margin-bottom:15px;
+    background-color:#48435C;
+    width:100%;
 }
 
 form{
     color:black;
+}
+
+#contact{
+    border: solid 1px black;
+    margin-top:25px;
+    padding:1px;
 }
 
 footer{
@@ -69,9 +91,17 @@ h3{
 
 .port-item{
     display: inline-block;
-    padding: 10px;
-    margin: 20px;
+    padding: 5px;
+    margin: 5px;
     
+}
+
+img{
+    max-height:200px;
+}
+
+.container{
+    margin:0;S
 }
 
 
