updating some color styling/content placement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ nav{
     float:left;
     padding:10px;
     margin-bottom: 30px;
-    background-color:#48435C;
+    background-color:#D8DDDE;
     width:100%;
 }
 
@@ -43,7 +43,7 @@ nav{
     float:left;
     padding:5px;
     margin-bottom:15px;
-    background-color:#48435C;
+    background-color:#D8DDDE;
     width:100%;
 }
 
